# blorp

./: .gitignore  CMakeLists.txt  spritesheet.png.animu.txt  todo.txt
src/: main.cpp
